--- a/src/LetsFish.Wasm/Layout/NavMenu.razor
+++ b/src/LetsFish.Wasm/Layout/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Captains
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="anglers">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Anglers
+            </NavLink>
+        </div>
     </nav>
 </div>
 
