--- a/src/LetsFish.Wasm/Pages/Home.razor
+++ b/src/LetsFish.Wasm/Pages/Home.razor
@@ -1,7 +1,3 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<MudText Typo="Typo.h4">Let's Fish</MudText>
