--- a/src/LetsFish.Wasm/Layout/MainLayout.razor
+++ b/src/LetsFish.Wasm/Layout/MainLayout.razor
@@ -1,8 +1,7 @@
-﻿@inherits LayoutComponentBase
+﻿@* @inherits LayoutComponentBase
 
 <MudThemeProvider />
-<MudDialogProvider />
-<MudSnackbarProvider />
+
 
 <div class="page">
     <div class="sidebar">
@@ -19,3 +18,39 @@
         </article>
     </main>
 </div>
+ *@
+
+@inherits LayoutComponentBase
+@using Client.Themes;
+
+<MudThemingProvider Theme="_currentTheme"/>
+<MudDialogProvider />
+<MudSnackbarProvider />
+
+<MudLayout>
+    <MudAppBar Elevation="25">
+        <MudText Typo="Typo.h5" Class="ml-3">Let's Fish</MudText>
+        <MudToolBar DisableGutters="true">
+            <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" OnClick="@((e) => DrawerToggle())" Class="ml-3" />
+        </MudToolBar>
+    </MudAppBar>
+    <MudDrawer @bind-Open="_drawerOpen" Elevation="25" ClipMode="DrawerClipMode.Always">
+        <NavMenu />
+    </MudDrawer>
+    <MudMainContent>
+        <MudContainer MaxWidth="MaxWidth.False" Class="mt-4">   
+            @Body
+        </MudContainer>
+    </MudMainContent>
+</MudLayout>
+
+@code {
+    private bool _drawerOpen = true;
+    private MudTheme _currentTheme = LetsFishTheme.DefaultTheme1;
+
+    private void DrawerToggle()
+    {
+        _drawerOpen = !_drawerOpen;
+    }   
+   
+}
