--- a/src/LetsFish.Wasm/Pages/Anglers.razor
+++ b/src/LetsFish.Wasm/Pages/Anglers.razor
@@ -3,6 +3,15 @@
 @inject HttpClient Http
 @inject ISnackbar Snackbar
 
+
+<style>
+    .mud-table-container {
+        overflow: auto;
+    }
+</style>
+
+<LetsFish.Wasm.Components.LetsFishTitle Title="Anglers" Description="Manage Anglers"></LetsFish.Wasm.Components.LetsFishTitle>
+
 @if (anglers == null)
 {
     <p><em>Loading...</em></p>
@@ -13,17 +22,18 @@ else
         <div class="row">
             <MudDataGrid Items="@angulersFilteredQuery" T="Angler" Dense Striped ReadOnly="false" CommittedItemChanges="@CommittedItemChanges">
                 <ToolBarContent>
-                    <MudButton DisableElevation Variant="Variant.Filled" Color="Color.Primary" OnClick="(() => AddNew())" StartIcon="@Icons.Material.Filled.Add" IconColor="Color.Surface">Add</MudButton>
-                    <MudText Typo="Typo.h6">Anglers</MudText>
-                    <MudSpacer />
                     <MudFocusTrap Disabled="false" DefaultFocus="DefaultFocus.FirstChild">
                         <MudTextField @bind-Value="_searchString" OnKeyUp="@SearchTextChanged" Immediate="true"
                                       Placeholder="Search for Captains" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0 mb-3"></MudTextField>
                     </MudFocusTrap>
+                    <MudSpacer />
+
+                    <MudButton DisableElevation Variant="Variant.Filled" Color="Color.Primary" OnClick="(() => AddNew())" StartIcon="@Icons.Material.Filled.Add" IconColor="Color.Surface">Add</MudButton>
+
                 </ToolBarContent>
                 <Columns>
                     <PropertyColumn Property="x => x.FirstName" Title="First Name" />
-                    <PropertyColumn Property="x => x.LastName" Title="Last Name"/>
+                    <PropertyColumn Property="x => x.LastName" Title="Last Name" />
                     <PropertyColumn Property="x => x.Email" />
                     <PropertyColumn Property="x => x.Phone" />
                     <PropertyColumn Property="x => x.GraduationYear" Title="Grad Year" />
@@ -53,7 +63,7 @@ else
     private Angler[]? anglers;
     private IQueryable<Angler>? angulersQuery;
     private IQueryable<Angler>? angulersFilteredQuery;
-    private Angler _angler= new Angler();
+    private Angler _angler = new Angler();
 
     protected override async Task OnInitializedAsync()
     {
