--- a/src/LetsFish.Wasm/Pages/Captains.razor
+++ b/src/LetsFish.Wasm/Pages/Captains.razor
@@ -3,6 +3,14 @@
 @inject HttpClient Http
 @inject ISnackbar Snackbar
 
+<style>
+    .mud-table-container {
+        overflow: auto;
+    }
+</style>
+
+<LetsFish.Wasm.Components.LetsFishTitle Title="Captains" Description="Manage Captains"></LetsFish.Wasm.Components.LetsFishTitle>
+
 @if (captains == null)
 {
     <p><em>Loading...</em></p>
@@ -14,7 +22,6 @@ else
             <MudDataGrid Items="@captainsFilteredQuery" T="Captain" Dense Striped ReadOnly="false" CommittedItemChanges="@CommittedItemChanges">
                 <ToolBarContent>
                     <MudButton DisableElevation Variant="Variant.Filled" Color="Color.Primary" OnClick="(() => AddNew())" StartIcon="@Icons.Material.Filled.Add" IconColor="Color.Surface">Add</MudButton>
-                    <MudText Typo="Typo.h6">Captains</MudText>
                     <MudSpacer />
                     <MudFocusTrap Disabled="false" DefaultFocus="DefaultFocus.FirstChild">
                         <MudTextField @bind-Value="_searchString" OnKeyUp="@SearchTextChanged" Immediate="true"
