-worked on layout

--- a/src/LetsFish.Wasm/Layout/MainLayout.razor
+++ b/src/LetsFish.Wasm/Layout/MainLayout.razor
@@ -1,29 +1,7 @@
-﻿@* @inherits LayoutComponentBase
-
-<MudThemeProvider />
-
-
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
- *@
-
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
 @using Client.Themes;
 
-<MudThemingProvider Theme="_currentTheme"/>
+<MudThemingProvider Theme="_currentTheme" />
 <MudDialogProvider />
 <MudSnackbarProvider />
 
