--- a/src/LetsFish.Wasm/Layout/NavMenu.razor
+++ b/src/LetsFish.Wasm/Layout/NavMenu.razor
@@ -1,40 +1,4 @@
-﻿@* <div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">LetsFish.Wasm</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>       
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="captains">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Captains
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="anglers">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Anglers
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="teams">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Teams
-            </NavLink>
-        </div>
-    </nav>
-</div> *@
-
-
-<MudNavMenu>
+﻿<MudNavMenu>
 
     <MudListSubheader Class="mt-2 mb-n2">Master Files</MudListSubheader>
     <MudNavLink Href="" Icon="@Icons.Material.Filled.Home" Text="Home">Home</MudNavLink>
